# foxschema

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  Readme.md  SECURITY.md  docker-compose.app.yml  docker-compose.db2.yml  docker-compose.yml  docker-entrypoint.sh  eslint.config.js  index.html  package-lock.json  package.json  schemacompare.db-shm  schemacompare.db-wal  tsconfig.json  verify-providers.mts  vite.config.ts  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: codeql.yml  dependency-security.yml  desktop-release.yml  npm-publish.yml  release-checksums.yml  release-gate.yml  secret-scan.yml  version-bump.yml  web-release.yml  winget.yml
Formula/: foxschema.rb
apps/cli/: README.md  build-binary.mjs  build.mjs  package.json  tsconfig.json
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json  tauri.db2.conf.json
apps/desktop/src-tauri/.cargo/: audit.toml
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs
apps/e2e/: .gitignore  package.json  tsconfig.json  vitest.config.ts
apps/web/: .env.example  index.html  package.json  tsconfig.json  vite.config.ts
docs/: ARCHITECTURE.md  DEPLOYMENT.md  INSTALL.md  PUBLISH.md  USER_GUIDE.md  desktop-build.md  docker-hub-overview.md  homebrew.md  winget.md
docs/plans/: 2026-06-30-diff-colors-and-safety-gates.md  2026-07-01-migration-ordering-bugs.md  (+2 more)
scripts/: marketing-demo-video.mjs  marketing-screenshot.mjs  sync-public-packages.sh
src/: main.tsx  style.css
(+308 files in other folders)
