[package]
name = "foxschema-desktop"
version = "0.0.4"
description = "FoxSchema desktop (Community edition)"
authors = ["FoxSchema"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
rand = "0.8"
# OS-native secret store for the per-install encryption key (Keychain /
# Credential Manager / Secret Service). Keeps the key off disk so a copied DB
# can't be decrypted on another machine.
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
